--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # site settings
 title: JP's
 subtitle: Portfolio
-email: jppereztr@outlook.com
+email: no-spam@outlook.com
 description: Portfolio.
 baseurl: "/aboutme" # the subpath of your site, e.g. /blog
 url: # the base hostname & protocol for your site
